# chorus-pm

./: .gitignore  CMakeLists.txt  README.md
src/slimaudio/: slimaudio.c  slimaudio.h  slimaudio_decoder_mad.c  slimaudio_decoder_vorbis.c  slimaudio_http.c  slimaudio_output.c
src/slimproto/: config.h.in  renice.c  slimproto.c  slimproto.h
src/squeezeslave/: CMakeLists.txt  help.c  squeezeslave.c
